--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Cadastrar Setor</title>
-</head>
-<body>
-     
-</body>
-</html>
+{%extends 'main/base.html' %}
