--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -11,6 +11,7 @@
      <ul>
           <li><a href="{% url 'unidade.index' %}">Acessar Unidade</p></a></li>
           <li><a href="{% url 'home' %}">Home</p></a></li>
+          <li><a href="{% url 'setor.index' %}">Acessar Setores</p></a></li>
           {% block content %}
           {% endblock content%}
      </ul>
