--- a/unidade/templates/unidade/unidade_list.html
+++ b/unidade/templates/unidade/unidade_list.html
@@ -1,6 +1,8 @@
 {%extends 'main/base.html' %} 
 {% block content %}
-<a href="{% url 'unidade.novo' %}">Novo</a>
+<a href="{% url 'unidade.novo' %}">Cadrastar Unidade</a>
+</br>
+</br>
 <table>
      <thead>
           <tr>
