--- a/unidade/templates/unidade/unidade_confirm_delete.html
+++ b/unidade/templates/unidade/unidade_confirm_delete.html
@@ -1,5 +1,6 @@
 <form method='post'>
      {% csrf_token %}
 	<p>Deseja excluir '{{ object }}'?</p>
-	<input type='submit' value='Confirm'>
+	<input type='submit' value='Confirmar'>
+	<a href='/unidade/'><button type="button">Voltar</button></a>
 </form>
