--- a/setor/templates/setor/setor_confirm_delete.html
+++ b/setor/templates/setor/setor_confirm_delete.html
@@ -1,6 +1,6 @@
 <form method='post'>
      {% csrf_token %}
 	<p>Deseja excluir '{{ object.nome_setor }}'?</p>
-	<input type='submit' value='Confirmar'>
+	<input type='submit' value='Confirm'>
 	<a href='/setor/'><button type="button">Voltar</button></a>
 </form>
