--- a/funcionario/templates/funcionario/funcionario_list.html
+++ b/funcionario/templates/funcionario/funcionario_list.html
@@ -59,6 +59,17 @@
                display: table;
                clear: both;
           }
+          th, td {
+               border: 1px solid;
+               text-align: center;
+               vertical-align: middle;
+             }
+     
+          table{
+               width: 100%;
+               border: 1px solid;
+               border-collapse: collapsee
+          }
      </style>
 
 </head>
@@ -91,9 +102,62 @@
           <div class="column">
           </div>
      </div>
+
+     </br>
+     </br>
+
+     <div class="row">
+          <div class="column2">
+               <a href="{% url 'funcionario.novo' %}"><button type="button">Novo Funcionario</button></a>
+          </div>
+          <div class="column2">
+          </div>
+     </div>
+
+     </br>
+     </br>
+     <table>
+          <thead>
+               <tr>
+                    <th>Nome</th>
+                    <th>CPF</th>
+                    <th>Data de Nascimento</th>
+                    <th>Contato</th>
+                    <th>Endereço</th>
+                    <th>Bairro</th>
+                    <th>Número</th>
+                    <th>Complemento</th>
+                    <th>Login</th>
+                    <th>Senha</th>
+                    <th colspan=2>Ações</th>
+               <tbody>
+                    {% for funcionario in object_list %}
+                    <tr>
+                         <td>{{ funcionario.Nome_Funcionario }}</td>
+                         <td>{{ funcionario.CPF_Funcionario }}</td>
+                         <td>{{ funcionario.Data_Nascimento_Funcionario|date:"d/m/Y"}}</td>
+                         <td>{{ funcionario.Contato_Funcionario }}</td>
+                         <td>{{ funcionario.Endereco_Funcionario }}</td>
+                         <td>{{ funcionario.Bairro_Funcionario }}</td>
+                         <td>{{ funcionario.Numero_Funcionario }}</td>
+                         <td>{{ funcionario.Complemento_Funcionario }}</td>
+
+                         <!-- <td>{{ funcionario.documento_paciente }}</td>
+                         <td>{{ funcionario.numero_do_documento_paciente }}</td>  -->
+
+                         <td>Vazio</td>
+                         <td>Vazio</td>
+                         <td>Vazio</td>
+                         <td>Vazio</td>
+                    </tr>
+                    {% endfor %}
+               </tbody>
+          </thead>
+     </table>
      
           {% block content %}
           {% endblock content%}
      
 </body>
 </html>
+
