--- a/unidade/templates/unidade/unidade_confirm_delete.html
+++ b/unidade/templates/unidade/unidade_confirm_delete.html
@@ -1,6 +1,6 @@
 <form method='post'>
      {% csrf_token %}
-	<p>Deseja excluir '{{ object }}'?</p>
-	<input type='submit' value='Confirmar'>
+	<p>Deseja excluir '{{ object.nome_unidade }}'?</p>
+	<input type='submit' value='Excluir'>
 	<a href='/unidade/'><button type="button">Voltar</button></a>
 </form>
