--- a/unidade/templates/unidade/unidade_list.html
+++ b/unidade/templates/unidade/unidade_list.html
@@ -13,7 +13,8 @@
           border-collapse: collapsee
      }
 </style>
-<a href="{% url 'unidade.novo' %}">Cadastrar Unidade</a>
+</br>
+<a href="{% url 'unidade.novo' %}"><button type="button">Nova Unidade</button></a>
 </br>
 </br>
 <table>
