--- a/paciente/templates/paciente/paciente_list.html
+++ b/paciente/templates/paciente/paciente_list.html
@@ -3,6 +3,10 @@
 <style>
      .column {
           float: left;
+          width: 33%;
+     }
+     .column2 {
+          float: left;
           width: 50%;
      }
              
@@ -15,7 +19,7 @@
      th, td {
           border: 1px solid;
           text-align: center;
-          vertical-align: bottom;
+          vertical-align: middle;
         }
 
      table{
@@ -24,11 +28,18 @@
           border-collapse: collapsee
      }
 </style>
+</br>
           <div class="row">
-               <div class="column">
-                    <a href="{% url 'setor.novo' %}">Adicionar Paciente</a>
+               <div class="column2">
+                    <a href="{% url 'paciente.novo' %}"><button type="button">Novo Paciente</button></a>
                </div>
-               <div class="column">
+               <div class="column2">
+                    <form method="GET">
+                         {% csrf_token %}
+                         <p>Buscar: </p>
+                         <input class="form-control" type="text" name="nome" required>
+                         <input type="submit" value="Buscar"></input>
+                    </form>
                </div>
           </div>
 
@@ -51,30 +62,29 @@
                          <th>Documento</th>
                          <th>Nº Documento</th>
                          <th>Contato de Emergência</th>
-                         <th>Ações</th>
-                    </tr>
+                         <th colspan=2>Ações</th>
                     <tbody>
-                         {% for setor in object_list %}
+                         {% for paciente in object_list %}
                          <tr>
                               <td>{{ paciente.nome_paciente }}</td>
                               <td>{{ paciente.sexo_paciente }}</td>
-                              <td>{{ paciente.datanascimento_paciente }}</td>
+                              <td>{{ paciente.data_nascimento_paciente|date:"d/m/Y"}}</td>
                               <td>{{ paciente.municipio_paciente }}</td>
                               <td>{{ paciente.cep_paciente }}</td>
                               <td>{{ paciente.endereco_paciente }}</td>
                               <td>{{ paciente.bairro_paciente }}</td>
                               <td>{{ paciente.numero_paciente }}</td>
                               <td>{{ paciente.estado_paciente }}</td>
-                              <td>{{ paciente.cartaosus_paciente }}</td>
+                              <td>{{ paciente.cartao_sus_paciente }}</td>
                               <td>{{ paciente.documento_paciente }}</td>
-                              <td>{{ paciente.numerodocumento_paciente }}</td>
-                              <td>{{ paciente.contatoemergencia_paciente }}</td>
+                              <td>{{ paciente.numero_do_documento_paciente }}</td>
+                              <td>{{ paciente.contato_emergencia_paciente }}</td>
      
                               <td>
-                                   <a href="{% url 'paciente.remover' paciente.pk %}"><button type="button">Excluir</button></a>
+                                   <a href="{%url 'paciente.editar' paciente.pk %}"><button type="button">Editar</button></a>
                               </td>
                               <td>
-                                   <a href="{% url 'paciente.editar' paciente.pk %}"><button type="button">Editar</button></a>
+                                   <a href="{%url 'paciente.remover' paciente.pk %}"><button type="button">Excluir</button></a>
                               </td>
                          </tr>
                          {% endfor %}
