--- a/funcionario/templates/funcionario/funcionario_list.html
+++ b/funcionario/templates/funcionario/funcionario_list.html
@@ -127,8 +127,7 @@
                     <th>Bairro</th>
                     <th>Número</th>
                     <th>Complemento</th>
-                    <th>Login</th>
-                    <th>Senha</th>
+                    
                     <th colspan=2>Ações</th>
                <tbody>
                     {% for funcionario in object_list %}
@@ -145,10 +144,11 @@
                          <!-- <td>{{ funcionario.documento_paciente }}</td>
                          <td>{{ funcionario.numero_do_documento_paciente }}</td>  -->
 
-                         <td>Vazio</td>
-                         <td>Vazio</td>
-                         <td>Vazio</td>
-                         <td>Vazio</td>
+                         
+                         <td>Editar</td>
+                         <td>
+                              <a href="{%url 'funcionario.remover' funcionario.pk %}"><button type="button">Excluir</button></a>
+                         </td>
                     </tr>
                     {% endfor %}
                </tbody>
