--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -89,6 +89,7 @@
                <a href="{% url 'funcionario.index' %}"><button class="button-27" role="button">Acessar Funcionario</button></a>
           </div>
           <div class="column">
+               <a href="{% url 'fichamedica.index' %}"><button class="button-27" role="button">Acessar Ficha Médica</button></a>
           </div>
      </div>
      
