--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -91,6 +91,11 @@
           <div class="column">
                <a href="{% url 'fichamedica.index' %}"><button class="button-27" role="button">Acessar Ficha Médica</button></a>
           </div>
+     </div> <br>
+     <div class="row">
+          <div class="column">
+               <a href="{% url 'prontuario.index' %}"><button class="button-27" role="button">Acessar Prontuario</button></a>
+          </div>
      </div>
      
           {% block content %}
