--- a/fichamedica/templates/fichamedica/fichamedica_list.html
+++ b/fichamedica/templates/fichamedica/fichamedica_list.html
@@ -85,7 +85,11 @@
                <p>Buscar: </p>
                <input class="form-control" type="text" name="nome" required>
                <input type="submit" value="Buscar"></input>
-          </form>
+               <input type="radio" id="CF" name="marca" value="CF" checked>
+               <label for="CF">Nº da Ficha</label>
+               <input type="radio" id="CS" name="marca" value="CS">
+               <label for="CS">Cartão do SUS</label>
+          </form> 
      </div>
 </div>
 
