--- a/paciente/templates/paciente/paciente_list.html
+++ b/paciente/templates/paciente/paciente_list.html
@@ -59,24 +59,24 @@
                          <th>Número</th>
                          <th>Estado</th>
                          <th>Nº SUS</th>
-                         <th>Nº CPF</th>
+                         <th>CPF</th>
                          <th>Contato de Emergência</th>
                          <th colspan=4>Ações</th>
                     <tbody>
                          {% for paciente in object_list %} 
                          <tr>
-                              <td>{{ paciente.nome_paciente }}</td>
-                              <td>{{ paciente.sexo_paciente }}</td>
-                              <td>{{ paciente.data_nascimento_paciente|date:"d/m/Y"}}</td>
-                              <td>{{ paciente.municipio_paciente }}</td>
+                              <td>{{ paciente.Nome }}</td>
+                              <td>{{ paciente.Sexo }}</td>
+                              <td>{{ paciente.Data_Nascimento|date:"d/m/Y"}}</td>
+                              <td>{{ paciente.Municipio_Paciente }}</td>
                               <td>{{ paciente.cep_paciente }}</td>
                               <td>{{ paciente.endereco_paciente }}</td>
                               <td>{{ paciente.bairro_paciente }}</td>
                               <td>{{ paciente.numero_paciente }}</td>
                               <td>{{ paciente.estado_paciente }}</td>
-                              <td>{{ paciente.cartao_sus_paciente }}</td>
-                              <td>{{ paciente.numero_do_documento_paciente }}</td>
-                              <td>{{ paciente.contato_emergencia_paciente }}</td>
+                              <td>{{ paciente.Cartao_SUS }}</td>
+                              <td>{{ paciente.cpf_paciente }}</td>
+                              <td>{{ paciente.Contato_Emergencia }}</td>
      
                               <td>
                                    <a href="{%url 'paciente.editar' paciente.pk %}"><button type="button">Editar</button></a>
@@ -85,10 +85,10 @@
                                    <a href="{%url 'paciente.remover' paciente.pk %}"><button type="button">Excluir</button></a>
                               </td>
                               <td>
-                                   <form> <button type="submit" name="link" value={{ paciente.numero_do_documento_paciente }}>Fichas</button> </form>
+                                   <form> <button type="submit" name="link" value={{ paciente.cpf_paciente }}>Fichas</button> </form>
                               </td>
                               <td>
-                                   <form> <button type="submit" name="link2" value={{ paciente.numero_do_documento_paciente }}>Prontuários</button> </form>
+                                   <form> <button type="submit" name="link2" value={{ paciente.cpf_paciente }}>Prontuários</button> </form>
                               </td>
                          </tr>
                          {% endfor %}
