--- a/paciente/templates/paciente/paciente_confirm_delete.html
+++ b/paciente/templates/paciente/paciente_confirm_delete.html
@@ -1,6 +1,6 @@
 <form method="post">
      {% csrf_token %}
-     <p>Deseja excluir "{{ object.nome_paciente }}"?</p>
+     <p>Deseja excluir "{{ object.Nome }}"?</p>
      <input type="submit" value="Excluir">
      <a href='/paciente/'><button type="button">Voltar</button></a>
  </form>
